Revamped CSS, fixed grid resizing so it doesn't overflow, added mode buttons

--- a/mini-projects/etch-a-sketch/static/styles.css
+++ b/mini-projects/etch-a-sketch/static/styles.css
@@ -1,48 +1,34 @@
-#grid-footer {
-  max-width: 1200px;
-  color: black;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-
 #grid-container {
-  max-width: 1200px;
-  max-height: 100vh;
-  margin: 50px;
+  width: 600px;
+  height: 600px;
+  margin: 30px auto;
   flex-flow: column nowrap;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-  
+  align-items: center;  
+  display: flex;  
 }
-.row {
+
+#container-round {
+  border-radius: 25px;
+  border: 2px solid palevioletred;
+  background-color: palevioletred;
+  margin: 25px auto;
+  width: 700px;
+  height: 800px;  
+}
+
+.rowGrid {
+  width: 600px;
+  color: turquoise;
+  flex: 1 0 auto;
   display: flex;
-  justify-content: center;  
-  max-width: 1200px;
-  height: 30px;
-  color: #fff;
-  flex-direction: row;
   flex-wrap: nowrap;
 }
 
-.col {
-  display: flex;
-  border: 1px solid whitesmoke;
-  height: 30px;
-  width: 30px;  
-  background-color: turquoise;
-}
-
-.test{
-  margin: left;
-}
-
-@media screen and (min-width: 800px) {
-  .column {
-    flex: 1;
-  }
+.colGrid {
+  border: 1px solid pink;
+  background-color: whitesmoke;
+  flex-grow: 1;
+  max-width: 100%;
 }
 
 .btn-info.focus, .btn-info:focus {
@@ -50,3 +36,11 @@
   border-color:#17a2b8 !important;
   background-color: #17a2b8 !important;
 }
+
+.grid-footer {
+  max-width: 1200px;
+  display: flex;  
+  justify-content: center;
+  margin: 10px auto;
+}
+
